# xml-to-pydantic

./: .coverage  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: fields.md  index.md  models.md  started.md
src/xml_to_pydantic/: __init__.py  docs.py  model.py  typing.py
tests/: test_basic_xml.py  test_css.py  test_docs.py  test_explicit_xpath.py  test_inferred_xpath.py  test_lxml.py  test_nested_models.py  test_python_typing.py  test_simple_model.py  test_typing.py  test_version.py
tests/endtoend/: test_xml.py
tests/endtoend/data/: ipg240109_head.xml
