[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "xml-to-pydantic"
version = "0.2"
description = ""
authors = ["Simon Wicks <simw@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{include = "xml_to_pydantic", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0"
lxml = "^5.0"
typing-extensions = "^4.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
eval-type-backport = "^0.2.0"

[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
ruff = "^0.4.5"
mypy = "^1.10.0"
types-lxml = "^2024.4.14"


[tool.mypy]
strict = true


[tool.black]
color = true
line-length = 88
target-version = ["py38"]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C90",  # Mccabe complexity
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "ASYNC",  # flake8-ASYNC
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pyteststyle
    "PD",  # pandas-vet
    "PL",  # pylint
    "PERF",  # perflint
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/**" = ["S"]  # Don't run bandit on tests (eg flagging on assert)

[tool.ruff.format]
# For consistency with black autoformatter
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["xml_to_pydantic"]


[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
filterwarnings = [
    "error"
]


[tool.coverage.run]
source = ["src/xml_to_pydantic"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]
fail_under = 100
